SERVER-50127 fail index build resume if we cannot find resume info using index spec